# Rx

./: CMakeLists.txt  Main.cpp  README.md  RxGameWorld.hpp  RxLevel.hpp  RxLevel2.hpp  RxLoadingScreen.hpp  RxWorld.cpp  main.cpp
Application/: Application.cpp  Application.hpp  CMakeLists.txt  GameWorld.cpp  GameWorld.hpp  GameWorldBase.cpp  GameWorldBase.hpp  Level.hpp  LoadingScreen.hpp  PhysicsGameWorld.cpp  PhysicsGameWorld.hpp  RxDefaultGameWorld.hpp  RxDefaultLoadingScreen.hpp
Asset/: CMakeLists.txt  LoadDataHelper.hpp  LoadSkeletonModel.cpp  LoadSkeletonModel.hpp  LoadTexture.cpp  LoadTexture.hpp  LoadTextureModel.cpp  LoadTextureModel.hpp
Component/: AnimationBone.hpp  AnimationClip.hpp  AnimationMap.hpp  AnimationStateMachine.hpp  BoxCollider.hpp  CMakeLists.txt  ColorArrayGraphics.cpp  ColorArrayGraphics.hpp  ColorMesh.hpp  ColorMeshArray.cpp  ColorMeshArray.hpp  ColorModelInstance.hpp  ContactInfo.hpp  DirectionalLight.hpp  FlyingCamera.hpp  IndirectBuffer.hpp  KeyFrameBuffer.hpp  LocalTransform.hpp  Material.hpp  MeshArray.cpp  MeshArray.hpp  Node.hpp  NodeChildren.hpp  NodeTransform.hpp  PhysicsBody.hpp  PointLight.hpp  RigidBody.hpp  Skeleton.cpp  Skeleton.hpp  SkeletonBuffer.hpp  SkeletonEntityArray.hpp  SkeletonIndex.hpp  SkeletonInstance.hpp  SkeletonMeshArray.cpp  SkeletonMeshArray.hpp  TextureArray.hpp  TextureMaterialBuffer.hpp  TextureMeshArray.hpp  Transform.hpp  TransformInstance.hpp  (+32 more)
Converter/: AssimpHelpers.hpp  CMakeLists.txt  Main.cpp  SkeletonModelConverter.cpp  SkeletonModelConverter.hpp  TextureModelConverter.cpp  TextureModelConverter.hpp
Converter/Stb/: stb_image.h
Core/: Allocator.cpp  Allocator.hpp  Buffer.cpp  Buffer.hpp  CMakeLists.txt  Command.cpp  Command.hpp  Core.cpp  Core.hpp  DescriptorPool.cpp  DescriptorPool.hpp  DescriptorSetLayouts.cpp  DescriptorSetLayouts.hpp  Device.cpp  Device.hpp  Eye.cpp  Eye.hpp  Fence.cpp  Fence.hpp  Framebuffers.cpp  Framebuffers.hpp  Global.hpp  Image.cpp  Image.hpp  Input.cpp  Input.hpp  Instance.cpp  Instance.hpp  Light.cpp  Light.hpp  Mutex.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp  Physics.hpp  PipelineLayouts.cpp  PipelineLayouts.hpp  Pipelines.cpp  Pipelines.hpp  Queue.cpp  Queue.hpp  (+15 more)
Examples/Example1/: CMakeLists.txt  Level1.hpp  Main.cpp
Examples/Example2/: CMakeLists.txt  Level1.hpp
Examples/Example3/: CMakeLists.txt  GameWorldExample3.hpp  Level1.hpp  Main.cpp
Examples/Example4/: CMakeLists.txt  GameWorldExample4.hpp  Level1.hpp  Main.cpp  RxLevel.hpp  RxLevel2.hpp
Examples/Example5/: CMakeLists.txt  RxLevel.hpp
Examples/Example6/: CMakeLists.txt  RxLevel.hpp
Examples/Example7/: CMakeLists.txt  Main.cpp  RxLevel.hpp
Shader/: SkeletonModelShader.comp  SkeletonModelShader.vert  SkeletonModelShader.vert.spv  TextureModelShader.frag.spv  TextureModelShader.vert  TextureModelShader.vert.spv  colorMeshArrayVertexShader.vert.spv  colorMeshFragmentShader.frag  instancedColorMeshVertexShader.vert
Shape/: CMakeLists.txt  Shape.cpp  Shape.hpp
application/: CMakeLists.txt  PhysicsGameWorld.cpp  PhysicsGameWorld.hpp  RxDefaultGameWorld.hpp  RxDefaultLoadingScreen.hpp  application.cpp  application.hpp  gameWorld.cpp  gameWorld.hpp  gameWorldBase.cpp  gameWorldBase.hpp  level.hpp  loadingScreen.hpp
asset/: CMakeLists.txt  LoadDataHelper.hpp  LoadSkeletonModel.cpp  LoadSkeletonModel.hpp  LoadTexture.cpp  LoadTexture.hpp  LoadTextureModel.cpp  LoadTextureModel.hpp
component/: AnimationBone.cpp  AnimationBone.hpp  AnimationClip.hpp  AnimationMap.hpp  AnimationStateMachine.hpp  BoxCollider.hpp  CMakeLists.txt  ColorModelInstance.hpp  ContactInfo.hpp  DirectionalLight.hpp  LocalTransform.hpp  Material.hpp  Node.hpp  NodeChildren.hpp  NodeTransform.hpp  PointLight.hpp  RigidBody.hpp  Sensor.hpp  Skeleton.hpp  SkeletonBuffer.hpp  SkeletonEntityArray.hpp  SkeletonIndex.hpp  SkeletonInstance.hpp  SkeletonMeshArray.hpp  TextureArray.cpp  TextureArray.hpp  TextureMaterialBuffer.hpp  TextureMeshArray.cpp  TextureMeshArray.hpp  TransformInstance.hpp  VkColorMesh.cpp  VkColorMesh.hpp  VkColorModelBuffer.hpp  VkColorModelDescriptorSet.cpp  VkColorModelDescriptorSet.hpp  VkIndirectBuffer.hpp  VkInstancedColorModelBuffer.cpp  VkInstancedColorModelBuffer.hpp  VkInstancedColorModelDescriptorSet.cpp  VkInstancedColorModelDescriptorSet.hpp  (+40 more)
converter/: CMakeLists.txt  SkeletonModelConverter.cpp  SkeletonModelConverter.hpp  TextureModelConverter.cpp  TextureModelConverter.hpp  main.cpp
core/: CMakeLists.txt  Light.hpp  Physics.hpp  allocator.cpp  allocator.hpp  buffer.cpp  buffer.hpp  command.cpp  command.hpp  core.cpp  core.hpp  descriptorPool.cpp  descriptorPool.hpp  descriptorSetLayouts.cpp  descriptorSetLayouts.hpp  device.cpp  device.hpp  eye.cpp  eye.hpp  fence.cpp  fence.hpp  framebuffers.cpp  framebuffers.hpp  global.hpp  image.cpp  image.hpp  input.cpp  input.hpp  instance.cpp  instance.hpp  physicalDevice.cpp  physicalDevice.hpp  pipelineLayouts.cpp  pipelineLayouts.hpp  pipelines.cpp  pipelines.hpp  queue.cpp  queue.hpp  renderPass.cpp  renderPass.hpp  (+13 more)
examples/example1/: CMakeLists.txt  Level1.hpp  main.cpp
examples/example2/: CMakeLists.txt  Level1.hpp
examples/example3/: CMakeLists.txt  GameWorldExample3.hpp  Level1.hpp  main.cpp
examples/example4/: CMakeLists.txt  GameWorldExample4.hpp  Level1.hpp  RxLevel.hpp  RxLevel2.hpp  main.cpp
examples/example5/: CMakeLists.txt  RxLevel.hpp
examples/example6/: CMakeLists.txt  RxLevel.hpp  main.cpp
examples/example7/: CMakeLists.txt  RxLevel.hpp
flecs/: CMakeLists.txt
shader/: KeyframeToNode.comp  KeyframeToNode.comp.spv.h  SkeletonModelShader.comp.spv  SkeletonModelShader.frag  SkeletonModelShader.frag.spv  TextureModelShader.frag  colorMeshArrayVertexShader.vert  colorMeshArrayVertexShader.vert.spv  colorMeshFragmentShader.frag  colorMeshFragmentShader.frag.spv  colorMeshVertexShader.vert  colorMeshVertexShader.vert.spv  instancedColorMeshVertexShader.vert.spv
shape/: CMakeLists.txt  shape.cpp  shape.hpp
