cmake_minimum_required(VERSION 3.16.3)

project(rx)

add_library(rx_flecs STATIC
src/bootstrap.c
src/commands.c
src/component_actions.c
src/each.c
src/entity.c
src/entity_name.c
src/id.c
src/instantiate.c
src/iter.c
src/misc.c
src/observable.c
src/observer.c
src/on_delete.c
src/os_api.c
src/poly.c
src/ref.c
src/search.c
src/stage.c
src/type_info.c
src/value.c
src/world.c
src/addons/alerts.c
src/addons/app.c
src/addons/doc.c
src/addons/flecs_cpp.c
src/addons/http.c
src/addons/journal.c
src/addons/log.c
src/addons/metrics.c
src/addons/module.c
src/addons/rest.c
src/addons/timer.c
src/addons/units.c
src/addons/json/deserialize.c
src/addons/json/deserialize_value.c
src/addons/json/json.c
src/addons/json/serialize_entity.c
src/addons/json/serialize_field_info.c
src/addons/json/serialize_iter.c
src/addons/json/serialize_iter_result.c
src/addons/json/serialize_iter_result_query.c
src/addons/json/serialize_iter_result_table.c
src/addons/json/serialize_query_info.c
src/addons/json/serialize_type_info.c
src/addons/json/serialize_value.c
src/addons/json/serialize_world.c
src/addons/meta/api.c
src/addons/meta/cursor.c
src/addons/meta/c_utils.c
src/addons/meta/definitions.c
src/addons/meta/meta.c
src/addons/meta/rtt_lifecycle.c
src/addons/meta/serialized.c
src/addons/os_api_impl/os_api_impl.c
src/addons/parser/tokenizer.c
src/addons/pipeline/frame.c
src/addons/pipeline/pipeline.c
src/addons/pipeline/worker.c
src/addons/query_dsl/parser.c
src/addons/script/ast.c
src/addons/script/function.c
src/addons/script/functions_builtin.c
src/addons/script/functions_math.c
src/addons/script/parser.c
src/addons/script/script.c
src/addons/script/serialize.c
src/addons/script/template.c
src/addons/script/vars.c
src/addons/script/visit.c
src/addons/script/visit_check.c
src/addons/script/visit_eval.c
src/addons/script/visit_free.c
src/addons/script/visit_to_str.c
src/addons/script/expr/ast.c
src/addons/script/expr/parser.c
src/addons/script/expr/stack.c
src/addons/script/expr/util.c
src/addons/script/expr/visit_eval.c
src/addons/script/expr/visit_fold.c
src/addons/script/expr/visit_free.c
src/addons/script/expr/visit_to_str.c
src/addons/script/expr/visit_type.c
src/addons/stats/monitor.c
src/addons/stats/pipeline_monitor.c
src/addons/stats/stats.c
src/addons/stats/system_monitor.c
src/addons/stats/world_monitor.c
src/addons/stats/world_summary.c
src/addons/system/system.c
src/datastructures/allocator.c
src/datastructures/bitset.c
src/datastructures/block_allocator.c
src/datastructures/hash.c
src/datastructures/hashmap.c
src/datastructures/map.c
src/datastructures/name_index.c
src/datastructures/sparse.c
src/datastructures/stack_allocator.c
src/datastructures/strbuf.c
src/datastructures/switch_list.c
src/datastructures/vec.c
src/query/api.c
src/query/util.c
src/query/validator.c
src/query/cache/cache.c
src/query/cache/change_detection.c
src/query/cache/group.c
src/query/cache/iter.c
src/query/cache/match.c
src/query/cache/order_by.c
src/query/compiler/compiler.c
src/query/compiler/compiler_term.c
src/query/engine/eval.c
src/query/engine/eval_iter.c
src/query/engine/eval_member.c
src/query/engine/eval_pred.c
src/query/engine/eval_sparse.c
src/query/engine/eval_toggle.c
src/query/engine/eval_trav.c
src/query/engine/eval_union.c
src/query/engine/eval_up.c
src/query/engine/eval_utils.c
src/query/engine/trav_cache.c
src/query/engine/trav_down_cache.c
src/query/engine/trav_up_cache.c
src/query/engine/trivial_iter.c
src/storage/component_index.c
src/storage/entity_index.c
src/storage/ordered_children.c
src/storage/sparse_storage.c
src/storage/table.c
src/storage/table_cache.c
src/storage/table_graph.c

include/flecs.h

include/flecs/bake_config.h
include/flecs/os_api.h
include/flecs/addons/alerts.h
include/flecs/addons/app.h
include/flecs/addons/deprecated.h
include/flecs/addons/doc.h
include/flecs/addons/flecs_c.h
include/flecs/addons/flecs_cpp.h
include/flecs/addons/http.h
include/flecs/addons/json.h
include/flecs/addons/log.h
include/flecs/addons/meta.h
include/flecs/addons/meta_c.h
include/flecs/addons/metrics.h
include/flecs/addons/module.h
include/flecs/addons/os_api_impl.h
include/flecs/addons/pipeline.h
include/flecs/addons/rest.h
include/flecs/addons/script.h
include/flecs/addons/script_math.h
include/flecs/addons/stats.h
include/flecs/addons/system.h
include/flecs/addons/timer.h
include/flecs/addons/units.h
include/flecs/datastructures/allocator.h
include/flecs/datastructures/bitset.h
include/flecs/datastructures/block_allocator.h
include/flecs/datastructures/hashmap.h
include/flecs/datastructures/map.h
include/flecs/datastructures/sparse.h
include/flecs/datastructures/stack_allocator.h
include/flecs/datastructures/strbuf.h
include/flecs/datastructures/switch_list.h
include/flecs/datastructures/vec.h
include/flecs/private/addons.h
include/flecs/private/api_defines.h
include/flecs/private/api_flags.h
include/flecs/private/api_internals.h
include/flecs/private/api_support.h
include/flecs/private/api_types.h

include/flecs/addons/cpp/component.hpp
include/flecs/addons/cpp/c_types.hpp
include/flecs/addons/cpp/delegate.hpp
include/flecs/addons/cpp/entity.hpp
include/flecs/addons/cpp/entity_view.hpp
include/flecs/addons/cpp/field.hpp
include/flecs/addons/cpp/flecs.hpp
include/flecs/addons/cpp/iter.hpp
include/flecs/addons/cpp/lifecycle_traits.hpp
include/flecs/addons/cpp/log.hpp
include/flecs/addons/cpp/pair.hpp
include/flecs/addons/cpp/ref.hpp
include/flecs/addons/cpp/table.hpp
include/flecs/addons/cpp/type.hpp
include/flecs/addons/cpp/world.hpp
include/flecs/addons/cpp/impl/field.hpp
include/flecs/addons/cpp/impl/iter.hpp
include/flecs/addons/cpp/impl/world.hpp
include/flecs/addons/cpp/mixins/alerts/builder.hpp
include/flecs/addons/cpp/mixins/alerts/builder_i.hpp
include/flecs/addons/cpp/mixins/alerts/decl.hpp
include/flecs/addons/cpp/mixins/alerts/impl.hpp
include/flecs/addons/cpp/mixins/app/builder.hpp
include/flecs/addons/cpp/mixins/app/decl.hpp
include/flecs/addons/cpp/mixins/component/impl.hpp
include/flecs/addons/cpp/mixins/doc/decl.hpp
include/flecs/addons/cpp/mixins/doc/impl.hpp
include/flecs/addons/cpp/mixins/entity/builder.hpp
include/flecs/addons/cpp/mixins/entity/impl.hpp
include/flecs/addons/cpp/mixins/enum/impl.hpp
include/flecs/addons/cpp/mixins/event/builder.hpp
include/flecs/addons/cpp/mixins/event/decl.hpp
include/flecs/addons/cpp/mixins/event/impl.hpp
include/flecs/addons/cpp/mixins/id/decl.hpp
include/flecs/addons/cpp/mixins/id/impl.hpp
include/flecs/addons/cpp/mixins/json/decl.hpp
include/flecs/addons/cpp/mixins/meta/cursor.hpp
include/flecs/addons/cpp/mixins/meta/decl.hpp
include/flecs/addons/cpp/mixins/meta/impl.hpp
include/flecs/addons/cpp/mixins/meta/opaque.hpp
include/flecs/addons/cpp/mixins/metrics/builder.hpp
include/flecs/addons/cpp/mixins/metrics/decl.hpp
include/flecs/addons/cpp/mixins/metrics/impl.hpp
include/flecs/addons/cpp/mixins/module/impl.hpp
include/flecs/addons/cpp/mixins/observer/builder.hpp
include/flecs/addons/cpp/mixins/observer/builder_i.hpp
include/flecs/addons/cpp/mixins/observer/decl.hpp
include/flecs/addons/cpp/mixins/observer/impl.hpp
include/flecs/addons/cpp/mixins/pipeline/builder.hpp
include/flecs/addons/cpp/mixins/pipeline/builder_i.hpp
include/flecs/addons/cpp/mixins/pipeline/decl.hpp
include/flecs/addons/cpp/mixins/pipeline/impl.hpp
include/flecs/addons/cpp/mixins/query/builder.hpp
include/flecs/addons/cpp/mixins/query/builder_i.hpp
include/flecs/addons/cpp/mixins/query/decl.hpp
include/flecs/addons/cpp/mixins/query/impl.hpp
include/flecs/addons/cpp/mixins/rest/decl.hpp
include/flecs/addons/cpp/mixins/rest/impl.hpp
include/flecs/addons/cpp/mixins/script/builder.hpp
include/flecs/addons/cpp/mixins/script/decl.hpp
include/flecs/addons/cpp/mixins/script/impl.hpp
include/flecs/addons/cpp/mixins/stats/decl.hpp
include/flecs/addons/cpp/mixins/stats/impl.hpp
include/flecs/addons/cpp/mixins/system/builder.hpp
include/flecs/addons/cpp/mixins/system/builder_i.hpp
include/flecs/addons/cpp/mixins/system/decl.hpp
include/flecs/addons/cpp/mixins/system/impl.hpp
include/flecs/addons/cpp/mixins/term/builder_i.hpp
include/flecs/addons/cpp/mixins/term/decl.hpp
include/flecs/addons/cpp/mixins/term/impl.hpp
include/flecs/addons/cpp/mixins/timer/decl.hpp
include/flecs/addons/cpp/mixins/timer/impl.hpp
include/flecs/addons/cpp/mixins/units/decl.hpp
include/flecs/addons/cpp/mixins/units/impl.hpp
include/flecs/addons/cpp/utils/array.hpp
include/flecs/addons/cpp/utils/builder.hpp
include/flecs/addons/cpp/utils/enum.hpp
include/flecs/addons/cpp/utils/function_traits.hpp
include/flecs/addons/cpp/utils/iterable.hpp
include/flecs/addons/cpp/utils/node_builder.hpp
include/flecs/addons/cpp/utils/signature.hpp
include/flecs/addons/cpp/utils/string.hpp
include/flecs/addons/cpp/utils/stringstream.hpp
include/flecs/addons/cpp/utils/utils.hpp
)

target_compile_definitions(rx_flecs PUBLIC flecs_STATIC)

target_include_directories(rx_flecs PUBLIC
    ./include
    ./include/flecs
)
target_link_libraries(rx_flecs PUBLIC
    # External dependencies
    Vulkan::Vulkan  # The imported target for Vulkan
    glm::glm        # The imported target for GLM
    glfw            # The imported target for GLFW

)